style: add correct grid gap

--- a/src/components/RandomDrinks/style.module.scss
+++ b/src/components/RandomDrinks/style.module.scss
@@ -1,4 +1,3 @@
 .random-drinks {
-  margin-right: 32px;
-	margin-bottom: 25px;
+  grid-gap: 32px 56px;
 }
